--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: thinkasany/organize-contributors@master
         with:
           organize_name: lyh-docs
-          github_token: ${{ secrets.ACTION_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           png_path: images/contributors.png
           json_path: contributors.json
           branch: main
